--- a/1.3-data-types/task.html
+++ b/1.3-data-types/task.html
@@ -20,6 +20,31 @@
     <span id="helloResult"></span>
 
     <script src="task.js"></script>
+    it('должна верно считать кредит: кейс #1', () => {
+      const nextYearDate = new Date(new Date().setFullYear(new Date().getFullYear() + 1));
+      expect(calculateTotalMortgage(10, 0, 50000, nextYearDate)).toEqual(52749.53);
+    });
+
+    it('должна верно считать кредит: кейс #2', () => {
+      const nextYearDate = new Date(new Date().setFullYear(new Date().getFullYear() + 1));
+      expect(calculateTotalMortgage(10, 1000, 50000, nextYearDate)).toEqual(51694.54);
+    });
+
+    it('должна верно считать кредит: кейс #3', () => {
+      const nextYearDate = new Date(new Date().setFullYear(new Date().getFullYear() + 4));
+      expect(calculateTotalMortgage(10, 20000, 20000, nextYearDate)).toEqual(0);
+    });
+
+    it('должна верно считать кредит: кейс #4', () => {
+      const nextYearDate = new Date(new Date().setFullYear(new Date().getFullYear() + 3));
+      expect(calculateTotalMortgage(10, 0, 10000, nextYearDate)).toEqual(11616.19);
+    });
+
+    it('должна верно считать кредит: кейс #5', () => {
+      const nextYearDate = new Date(new Date().setFullYear(new Date().getFullYear() + 3));
+      expect(calculateTotalMortgage(15, 0, 10000, nextYearDate)).toEqual(12479.52);
+    });
+  });
     <script src="main.js"></script>
 </body>
 </html>
