--- a/1.3-data-types/task.html
+++ b/1.3-data-types/task.html
@@ -19,7 +19,24 @@
     <button onClick="sayHello()">Поздороваться</button>
     <span id="helloResult"></span>
 
-    <script src="task.js"></script>
+    <script src="task.js">
+    function getAverageMark(marks){
+if (marks.length === 0){
+marks = 1;
+} else{
+let sumValue = 0;
+sumValue =+ marks[value];
+marks = sumValue / marks.length;
+console.log(sumValue);
+}
+}
+
+getAverageMark(data[key]); 
+console.log(data);
+}
+}
+} getAverageScore(object);
+</script>
     <script src="main.js"></script>
 </body>
 </html>
